--- a/views/media/editMediaForm.hbs
+++ b/views/media/editMediaForm.hbs
@@ -18,7 +18,7 @@
 
   <div class="form-group">
     <label for="formGroupExampleInput2">Review</label>
-    <textarea type="text" class="form-control" id="formGroupExampleInput2" placeholder="Review" name="review" rows="8" value="{{media.review}}"></textarea>
+    <textarea type="text" class="form-control" id="formGroupExampleInput2" placeholder="Review" name="review" rows="7" >{{media.review}}"</textarea>
   </div>
 
   <div class="form-group">
