31st commit: readme.md

--- a/views/media/allMedia.hbs
+++ b/views/media/allMedia.hbs
@@ -10,11 +10,14 @@
 
 <nav class="navbar fixed-top navbar-light bg-light">
   <a class="navbar-brand" href="/media">Home</a>
-  <a class="navbar-brand" href="/users">User Page</a>
   <a class="navbar-brand" href="/users/new">Create New Account</a>
 </nav>
 
-<h1 class="mainPage">Recent Posted</h1>
+<h1 class="mainPage">ENTERTAINMENT-ROOM</h1>
+
+<p class="intro">This is where you could find the reviews about movies, musics, and book that you are interested in, 
+  leave comments or post reviews of the movies, musics, books that you enjoy.</p>
+<p class="note">Note: To be able to read or post reviews, comments. Please create an account.</p>
 
 {{#each media}}
     <div class="media">
