43th commit: redirect heroku

--- a/views/media/allMedia.hbs
+++ b/views/media/allMedia.hbs
@@ -23,7 +23,7 @@
     <div class="media">
         <img class="img" src="{{imgLink}}" alt="Image of {{title}}">
         <div class"content">
-            <h3>Title: {{title}}</h3>
+            <h3>{{title}}</h3>
             <p>Type: {{type}}</p>
             <p>Rating: {{rating}}</p>
             <p>Posted {{posted}}</p>
