--- a/views/media/editMediaForm.hbs
+++ b/views/media/editMediaForm.hbs
@@ -28,7 +28,7 @@
 
   <div class="form-group">
     <label for="formGroupExampleInput2">Video Link</label>
-    <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Embed Link" name="videoLink" id="video-link"/>
+    <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Embed Link" name="videoLink" id="video-link" value="{{media.videoLink}}"/>
   </div>
 
   <input id="submitBtn" type="submit" value="Edit Review" />
