--- a/views/users/editUserForm.hbs
+++ b/views/users/editUserForm.hbs
@@ -1,6 +1,6 @@
 
 
-<h2>Edit User Post</h2>
+<h2>Edit User Information</h2>
 
 <form method="POST" action="/users/{{user._id}}?_method=PUT">
   <div class="form-group">
