--- a/views/comments/comments.hbs
+++ b/views/comments/comments.hbs
@@ -47,7 +47,7 @@
                         </div>
                     </div>
                 </form>
-                <a id="editComment" href="/media/{{mediaId}}/comments/{{_id}}/edit">Edit Comment</a>
+                <button id="editComment"><a href="/media/{{mediaId}}/comments/{{_id}}/edit">Edit Comment</a></button>
             </div>
         </div>
     </div>
