--- a/views/media/media.hbs
+++ b/views/media/media.hbs
@@ -30,7 +30,7 @@
               </div>
               <div class="Btn-2">
                 <form action="/users/{{userId}}/media/{{_id}}?_method=DELETE" method="post">
-                  <input type="submit" value="Delete Media">
+                  <input type="submit" value="Delete Post">
                 </form>
               </div>
             </div>
