--- a/views/comments/comments.hbs
+++ b/views/comments/comments.hbs
@@ -33,28 +33,19 @@
 {{#each comments}}
     <div class="commentsBox">    
         <div class="userPost">
-            <p>Posted By Anonymous User</p>
-            <p>{{posted}}</p>
+            <p>Posted By Anonymous User on   <span>  {{posted}}</span> </p>
         </div>
         <div class="comment">
-            <p>{{comment}}</p>
-            <div class="reply">
-                <form id="replyInput" method="POST" action="/media/{{mediaId}}/comments">
-                    <div class="input-group mb-3">
-                        <input type="text" class="form-control" placeholder="Reply..." name="comment" aria-label="Recipient's username" aria-describedby="button-addon2">
-                        <div class="input-group-append">
-                            <button class="btn btn-outline-secondary" id="submitBtn" type="submit">Reply</button>
-                        </div>
-                    </div>
+            <div class="commentText">
+                <p>{{comment}}</p>
+            </div>
+            <div class="deleteComment">
+                <form  action="/media/{{mediaId}}/comments/{{_id}}?_method=DELETE" method="post">
+                    <input id="deleteComment" type="submit" value="Delete Comment">
                 </form>
-                <button id="editComment"><a href="/media/{{mediaId}}/comments/{{_id}}/edit">Edit Comment</a></button>
             </div>
         </div>
     </div>
-    
-        <form  action="/media/{{mediaId}}/comments/{{_id}}?_method=DELETE" method="post">
-            <input id="deleteComment" type="submit" value="Delete Comment">
-        </form>
 {{/each}}
 
 
