49th commit: home view fix

--- a/views/media/allMedia.hbs
+++ b/views/media/allMedia.hbs
@@ -25,7 +25,7 @@
         <div class"content">
             <h3>{{title}}</h3>
             <p>Type: {{type}}</p>
-            <p>Rating: {{rating}}</p>
+            <p>Rating: {{rating}}/5</p>
             <p>Posted {{posted}}</p>
             <button><a href="/users/{{userId}}/media/{{_id}}">Read Review</a></button>
         </div>
