--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -46,7 +46,7 @@ h1, h2 {
 
 .comment {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     margin: 10px; 
 }
 
@@ -59,6 +59,10 @@ h1, h2 {
     width: 70%;
     height: 193px;
     margin: 15px auto;
+}
+
+.editCommentText {
+    margin-right: 10px;
 }
 /* .input-group {
     width: 70%;
@@ -80,10 +84,10 @@ h1, h2 {
     width: 700px;
 }
 
-#editComment {
+/* #editComment {
     float: right;
     padding: 0 auto;
-}
+} */
 
 .postCommentBtn {
     float: right;
